docs/tests/parser/types/invalid/TypeMatrixMissingCloseAngle.b
fn void test() {
    let mat<3,3 m;
}
